大破後に一度も母港に戻らず進撃(出撃時大破含まず)した場合にモーダルを出す

--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,17 @@ td.luck.max{background: #0f8}
 td.sub.max{background: #0f8}
 td.accuracy.max{background: #0f8}
 td.evasion.max{background: #0f8}
+
+/**
+ modal context
+*/
+.modal-danger {
+    border-radius: 6px;
+    background-color: #f2dede;
+}
+.modal-danger .modal-header,
+.modal-danger .modal-body,
+.modal-danger .modal-footer {
+    background-color: #f2dede;
+    color: #a94442;
+}
