--- a/view/index.html
+++ b/view/index.html
@@ -20,6 +20,23 @@
         <div class="tab-pane" id="stats">ここに各種カウント</div>
     </div>
 </div>
+<div class="modal fade" id="wreckedModal" tabindex="-1" role="dialog" aria-labelledby="wreckedModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content modal-danger">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">閉じる</span></button>
+                <h4 class="modal-title" id="wreckedModalLabel">大破艦を進撃させました！</h4>
+            </div>
+            <div class="modal-body">
+                <p>覚悟してください</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">閉じる</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="../js/share/lib.js"></script>
