ダメコン利用検知テスト

--- a/view/index.html
+++ b/view/index.html
@@ -65,6 +65,7 @@
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../js/share/consts.js"></script>
 <script type="text/javascript" src="../js/share/lib.js"></script>
 <script type="text/javascript" src="../js/share/utils.js"></script>
 <script type="text/javascript" src="../js/share/handler.js"></script>
